--- a/css/styles.css
+++ b/css/styles.css
@@ -1703,6 +1703,9 @@ HEADER {
   .btn {
     padding: 14px 18px;
   }
+  .header-wrapper .logo {
+    margin-left: 18px;
+  }
   .footer-contacts .btn {
     margin-top: 10px;
     width: 216px;
@@ -1848,7 +1851,7 @@ HEADER {
     font-size: 33px;
   }
   .popup-wrapper.popup-1 .popup {
-    width: calc(90% - 24px);
+    width: calc(90% - 38px);
   }
   .popup-wrapper .popup .title {
     padding-top: 6px;
@@ -1859,7 +1862,7 @@ HEADER {
     margin: 15px auto 0;
   }
   .popup-wrapper .popup {
-    padding: 12px;
+    padding: 19px;
   }
   .popup-wrapper .popup .popup-form .row {
     margin-bottom: 15px;
@@ -1881,9 +1884,8 @@ HEADER {
     padding-bottom: 8px;
   }
   .popup-wrapper .popup .popup-contents .popup-close {
-    font-size: 24px;
-    right: -11px;
-    top: -10px;
+    right: -19px;
+    top: -18px;
   }
   .request-callback .callback-title {
     padding: 50px 0 10px 0;
@@ -2118,5 +2120,127 @@ HEADER {
   .slider-section .slide-contents .product-descr .product-order {
     width: 100%;
     margin: 15px 0 30px;
+  }
+  .header-wrapper {
+    width: 100%;
+  }
+  .header-wrapper .menu {
+    display: block;
+    position: fixed;
+    width: 90%;
+    margin: 0;
+    left: 100%;
+    top: 74px;
+    background: rgba(0, 0, 0, .8);
+    padding-top: 16px;
+    -webkit-transition: all .3s ease .0s;
+    transition: all .3s ease .0s;
+  }
+  .header-wrapper .menu .menu-item {
+    height: auto;
+    display: block;
+    width: 100%;
+    vertical-align: middle;
+    text-align: center;
+    padding: 16px 0px;
+    border-bottom: 1px solid #db534c;
+    width: 50%;
+    margin: 0 auto;
+  }
+  .header-wrapper .menu .menu-item:last-of-type {
+    border-bottom: none;
+  }
+  .c-hamburger {
+    width: 80px;
+    height: 80px;
+    display: block;
+    outline: none;
+    position: absolute;
+    top: 3px;
+    right: 5px;
+    margin: 0;
+    padding: 0;
+    width: 68px;
+    height: 68px;
+    font-size: 0;
+    text-indent: -9999px;
+    border: none;
+    cursor: pointer;
+    -webkit-transition: all .3s ease .3s;
+    transition: all .3s ease .3s;
+    z-index: 300;
+    background: none;
+  }
+  .c-hamburger SPAN {
+    top: 32px;
+    left: 14px;
+    right: 14px;
+    position: absolute;
+    height: 4px;
+    background: #ffffff;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+  }
+  .btn-lines,
+  .c-hamburger SPAN:after,
+  .c-hamburger SPAN:before {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #fff;
+    content: "";
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+  }
+  .c-hamburger SPAN::before {
+    top: -10px;
+  }
+  .c-hamburger SPAN::after {
+    bottom: -10px;
+  }
+  .c-hamburger--htx.active SPAN {
+    background: 0 0;
+  }
+  .c-hamburger--htx.active SPAN::before {
+    top: 0;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    background: #fff;
+  }
+  .c-hamburger--htx.active SPAN::after {
+    bottom: 0;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    background: #fff;
+  }
+  .c-hamburger--htx.active + .menu {
+    left: 10%;
+  }
+  .header-wrapper .menu .menu-item A {
+    margin-right: 0;
+    font-size: 18px;
+  }
+  .phone-section {
+    display: none;
+  }
+  .menu .phone-section {
+    display: block;
+    z-index: -1;
+    width: 100%;
+    text-align: center !important;
+  }
+  .header-wrapper .phone-section A.phone,
+  .header-wrapper .phone-section A.callback {
+    position: absolute;
+    bottom: 105px;
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  .header-wrapper .phone-section A.callback {
+    bottom: 132px;
+    border-bottom: none;
   }
 }
