--- a/css/styles.css
+++ b/css/styles.css
@@ -2026,6 +2026,8 @@ HEADER {
     margin-right: 0;
     display: block;
     position: absolute;
+    max-width: 262px;
+    max-height: 262px;
   }
   .header-cover .rects-wrapper {
     left: 0;
